// Autogenerated with StateSmith 0.20.0+43839dcc75301cd62cac3f27a49bbde57af7ebda.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

// Whatever you put in this `FileTop` section will end up 
// being printed at the top of every generated code file.

#include "MySm.h"
#include <stdbool.h> // required for `consume_event` flag
#include <string.h> // for memset
// #include "your_header_here.h"


// This function is used when StateSmith doesn't know what the active leaf state is at
// compile time due to sub states or when multiple states need to be exited.
static void exit_up_to_state_handler(MySm* sm, MySm_StateId desired_state);

static void ROOT_enter(MySm* sm);

static void OFF_enter(MySm* sm);

static void OFF_exit(MySm* sm);

static void OFF_inc(MySm* sm);

static void OFF_toggle(MySm* sm);

static void ON_GROUP_enter(MySm* sm);

static void ON_GROUP_exit(MySm* sm);

static void ON_GROUP_toggle(MySm* sm);

static void ON1_enter(MySm* sm);

static void ON1_exit(MySm* sm);

static void ON1_dim(MySm* sm);

static void ON1_inc(MySm* sm);

static void ON2_enter(MySm* sm);

static void ON2_exit(MySm* sm);

static void ON2_dim(MySm* sm);

static void ON2_inc(MySm* sm);

static void ON3_enter(MySm* sm);

static void ON3_exit(MySm* sm);

static void ON3_dim(MySm* sm);


// State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
void MySm_ctor(MySm* sm)
{
    memset(sm, 0, sizeof(*sm));
}

// Starts the state machine. Must be called before dispatching events. Not thread safe.
void MySm_start(MySm* sm)
{
    ROOT_enter(sm);
    // ROOT behavior
    // uml: TransitionTo(ROOT.<InitialState>)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `ROOT.<InitialState>`.
        // ROOT.<InitialState> is a pseudo state and cannot have an `enter` trigger.
        
        // ROOT.<InitialState> behavior
        // uml: TransitionTo(OFF)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `OFF`.
            OFF_enter(sm);
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for ROOT.<InitialState>
    } // end of behavior for ROOT
}

// Dispatches an event to the state machine. Not thread safe.
// Note! This function assumes that the `event_id` parameter is valid.
void MySm_dispatch_event(MySm* sm, MySm_EventId event_id)
{
    switch (sm->state_id)
    {
        // STATE: MySm
        case MySm_StateId_ROOT:
            // No events handled by this state (or its ancestors).
            break;
        
        // STATE: OFF
        case MySm_StateId_OFF:
            switch (event_id)
            {
                case MySm_EventId_INC: OFF_inc(sm); break;
                case MySm_EventId_TOGGLE: OFF_toggle(sm); break;
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
        
        // STATE: ON_GROUP
        case MySm_StateId_ON_GROUP:
            switch (event_id)
            {
                case MySm_EventId_TOGGLE: ON_GROUP_toggle(sm); break;
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
        
        // STATE: ON1
        case MySm_StateId_ON1:
            switch (event_id)
            {
                case MySm_EventId_INC: ON1_inc(sm); break;
                case MySm_EventId_DIM: ON1_dim(sm); break;
                case MySm_EventId_TOGGLE: ON_GROUP_toggle(sm); break; // First ancestor handler for this event
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
        
        // STATE: ON2
        case MySm_StateId_ON2:
            switch (event_id)
            {
                case MySm_EventId_INC: ON2_inc(sm); break;
                case MySm_EventId_DIM: ON2_dim(sm); break;
                case MySm_EventId_TOGGLE: ON_GROUP_toggle(sm); break; // First ancestor handler for this event
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
        
        // STATE: ON3
        case MySm_StateId_ON3:
            switch (event_id)
            {
                case MySm_EventId_DIM: ON3_dim(sm); break;
                case MySm_EventId_TOGGLE: ON_GROUP_toggle(sm); break; // First ancestor handler for this event
                
                default: break; // to avoid "unused enumeration value in switch" warning
            }
            break;
    }
    
}

// This function is used when StateSmith doesn't know what the active leaf state is at
// compile time due to sub states or when multiple states need to be exited.
static void exit_up_to_state_handler(MySm* sm, MySm_StateId desired_state)
{
    while (sm->state_id != desired_state)
    {
        switch (sm->state_id)
        {
            case MySm_StateId_OFF: OFF_exit(sm); break;
            
            case MySm_StateId_ON_GROUP: ON_GROUP_exit(sm); break;
            
            case MySm_StateId_ON1: ON1_exit(sm); break;
            
            case MySm_StateId_ON2: ON2_exit(sm); break;
            
            case MySm_StateId_ON3: ON3_exit(sm); break;
            
            default: return;  // Just to be safe. Prevents infinite loop if state ID memory is somehow corrupted.
        }
    }
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state ROOT
////////////////////////////////////////////////////////////////////////////////

static void ROOT_enter(MySm* sm)
{
    sm->state_id = MySm_StateId_ROOT;
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state OFF
////////////////////////////////////////////////////////////////////////////////

static void OFF_enter(MySm* sm)
{
    sm->state_id = MySm_StateId_OFF;
    
    // OFF behavior
    // uml: enter / { print("---"); }
    {
        // Step 1: execute action `print("---");`
        print("---");
    } // end of behavior for OFF
}

static void OFF_exit(MySm* sm)
{
    sm->state_id = MySm_StateId_ROOT;
}

static void OFF_inc(MySm* sm)
{
    // OFF behavior
    // uml: inc TransitionTo(ON1)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        OFF_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `ON1`.
        ON_GROUP_enter(sm);
        ON1_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for OFF
    
    // No ancestor handles this event.
}

static void OFF_toggle(MySm* sm)
{
    // OFF behavior
    // uml: toggle TransitionTo(ON_GROUP)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        OFF_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `ON_GROUP`.
        ON_GROUP_enter(sm);
        
        // ON_GROUP.<InitialState> behavior
        // uml: TransitionTo(ON1)
        {
            // Step 1: Exit states until we reach `ON_GROUP` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `ON1`.
            ON1_enter(sm);
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for ON_GROUP.<InitialState>
    } // end of behavior for OFF
    
    // No ancestor handles this event.
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state ON_GROUP
////////////////////////////////////////////////////////////////////////////////

static void ON_GROUP_enter(MySm* sm)
{
    sm->state_id = MySm_StateId_ON_GROUP;
}

static void ON_GROUP_exit(MySm* sm)
{
    sm->state_id = MySm_StateId_ROOT;
}

static void ON_GROUP_toggle(MySm* sm)
{
    // ON_GROUP behavior
    // uml: toggle TransitionTo(OFF)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        exit_up_to_state_handler(sm, MySm_StateId_ROOT);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `OFF`.
        OFF_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for ON_GROUP
    
    // No ancestor handles this event.
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state ON1
////////////////////////////////////////////////////////////////////////////////

static void ON1_enter(MySm* sm)
{
    sm->state_id = MySm_StateId_ON1;
    
    // ON1 behavior
    // uml: enter / { print("$--"); }
    {
        // Step 1: execute action `print("$--");`
        print("$--");
    } // end of behavior for ON1
}

static void ON1_exit(MySm* sm)
{
    sm->state_id = MySm_StateId_ON_GROUP;
}

static void ON1_dim(MySm* sm)
{
    // ON1 behavior
    // uml: dim TransitionTo(OFF)
    {
        // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
        exit_up_to_state_handler(sm, MySm_StateId_ROOT);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `OFF`.
        OFF_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for ON1
    
    // No ancestor handles this event.
}

static void ON1_inc(MySm* sm)
{
    // ON1 behavior
    // uml: inc TransitionTo(ON2)
    {
        // Step 1: Exit states until we reach `ON_GROUP` state (Least Common Ancestor for transition).
        ON1_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `ON2`.
        ON2_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for ON1
    
    // No ancestor handles this event.
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state ON2
////////////////////////////////////////////////////////////////////////////////

static void ON2_enter(MySm* sm)
{
    sm->state_id = MySm_StateId_ON2;
    
    // ON2 behavior
    // uml: enter / { print("$$-"); }
    {
        // Step 1: execute action `print("$$-");`
        print("$$-");
    } // end of behavior for ON2
}

static void ON2_exit(MySm* sm)
{
    sm->state_id = MySm_StateId_ON_GROUP;
}

static void ON2_dim(MySm* sm)
{
    // ON2 behavior
    // uml: dim TransitionTo(ON1)
    {
        // Step 1: Exit states until we reach `ON_GROUP` state (Least Common Ancestor for transition).
        ON2_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `ON1`.
        ON1_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for ON2
    
    // No ancestor handles this event.
}

static void ON2_inc(MySm* sm)
{
    // ON2 behavior
    // uml: inc TransitionTo(ON3)
    {
        // Step 1: Exit states until we reach `ON_GROUP` state (Least Common Ancestor for transition).
        ON2_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `ON3`.
        ON3_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for ON2
    
    // No ancestor handles this event.
}


////////////////////////////////////////////////////////////////////////////////
// event handlers for state ON3
////////////////////////////////////////////////////////////////////////////////

static void ON3_enter(MySm* sm)
{
    sm->state_id = MySm_StateId_ON3;
    
    // ON3 behavior
    // uml: enter / { print("$$$"); }
    {
        // Step 1: execute action `print("$$$");`
        print("$$$");
    } // end of behavior for ON3
    
    // ON3 behavior
    // uml: enter / { count += 1; }
    {
        // Step 1: execute action `count += 1;`
        sm->vars.count += 1;
    } // end of behavior for ON3
}

static void ON3_exit(MySm* sm)
{
    sm->state_id = MySm_StateId_ON_GROUP;
}

static void ON3_dim(MySm* sm)
{
    // ON3 behavior
    // uml: dim TransitionTo(ON2)
    {
        // Step 1: Exit states until we reach `ON_GROUP` state (Least Common Ancestor for transition).
        ON3_exit(sm);
        
        // Step 2: Transition action: ``.
        
        // Step 3: Enter/move towards transition target `ON2`.
        ON2_enter(sm);
        
        // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
        return;
    } // end of behavior for ON3
    
    // No ancestor handles this event.
}

// Thread safe.
char const * MySm_state_id_to_string(MySm_StateId id)
{
    switch (id)
    {
        case MySm_StateId_ROOT: return "ROOT";
        case MySm_StateId_OFF: return "OFF";
        case MySm_StateId_ON_GROUP: return "ON_GROUP";
        case MySm_StateId_ON1: return "ON1";
        case MySm_StateId_ON2: return "ON2";
        case MySm_StateId_ON3: return "ON3";
        default: return "?";
    }
}

// Thread safe.
char const * MySm_event_id_to_string(MySm_EventId id)
{
    switch (id)
    {
        case MySm_EventId_DIM: return "DIM";
        case MySm_EventId_INC: return "INC";
        case MySm_EventId_TOGGLE: return "TOGGLE";
        default: return "?";
    }
}
